@@ -20,7 +20,6 @@ import static org.apache.solr.common.params.CommonAdminParams.ASYNC;
 import static org.apache.solr.common.params.CommonParams.ID;
 
 import com.codahale.metrics.Timer;
-import com.google.common.collect.ImmutableSet;
 import java.io.Closeable;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
@@ -35,15 +34,14 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.SynchronousQueue;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
-import org.apache.commons.io.IOUtils;
 import org.apache.solr.cloud.Overseer.LeaderStatus;
 import org.apache.solr.cloud.OverseerTaskQueue.QueueEvent;
 import org.apache.solr.common.AlreadyClosedException;
-import org.apache.solr.common.SolrException;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkNodeProps;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.util.ExecutorUtil;
+import org.apache.solr.common.util.IOUtils;
 import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.Utils;
@@ -124,7 +122,7 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
 
         @Override
         public String toString() {
-          return StrUtils.join(ImmutableSet.of(runningTasks, blockedTasks.keySet()), ',');
+          return StrUtils.join(Set.of(runningTasks, blockedTasks.keySet()), ',');
         }
       };
 
@@ -159,7 +157,7 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
     this.runningZKTasks = ConcurrentHashMap.newKeySet();
     this.runningTasks = ConcurrentHashMap.newKeySet();
     this.completedTasks = new ConcurrentHashMap<>();
-    thisNode = Utils.getMDCNode();
+    thisNode = MDCLoggingContext.getNodeName();
 
     overseerTaskProcessorMetricsContext = solrMetricsContext.getChildContext(this);
     overseerTaskProcessorMetricsContext.gauge(
@@ -189,7 +187,7 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
     } catch (KeeperException e) {
       // We don't need to handle this. This is just a fail-safe which comes in handy in skipping
       // already processed async calls.
-      SolrException.log(log, "", e);
+      log.error("KeeperException", e);
     } catch (AlreadyClosedException e) {
       return;
     } catch (InterruptedException e) {
@@ -384,7 +382,7 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
             log.warn("Overseer cannot talk to ZK");
             return;
           }
-          SolrException.log(log, "", e);
+          log.error("KeeperException", e);
 
           // Prevent free-spinning this loop.
           try {
@@ -397,10 +395,10 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
         } catch (InterruptedException e) {
           Thread.currentThread().interrupt();
           return;
-        } catch (AlreadyClosedException e) {
+        } catch (AlreadyClosedException ignore) {
 
         } catch (Exception e) {
-          SolrException.log(log, "", e);
+          log.error("Exception processing", e);
         }
       }
     } finally {
@@ -418,11 +416,12 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
     }
   }
 
+  @Override
   public void close() {
     isClosed = true;
     overseerTaskProcessorMetricsContext.unregister();
     if (tpe != null) {
-      if (!tpe.isShutdown()) {
+      if (!ExecutorUtil.isShutdown(tpe)) {
         ExecutorUtil.shutdownAndAwaitTermination(tpe);
       }
     }
@@ -548,6 +547,7 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
       response = null;
     }
 
+    @Override
     public void run() {
       String statsName = messageHandler.getTimerName(operation);
       final Timer.Context timerContext = stats.time(statsName);
@@ -602,10 +602,10 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
               response.getResponse());
         }
         success = true;
-      } catch (AlreadyClosedException e) {
+      } catch (AlreadyClosedException ignore) {
 
       } catch (KeeperException e) {
-        SolrException.log(log, "", e);
+        log.error("KeeperException", e);
       } catch (InterruptedException e) {
         // Reset task from tracking data structures so that it can be retried.
         resetTaskWithException(messageHandler, head.getId(), asyncId, taskKey, message);
@@ -617,7 +617,7 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
           // Reset task from tracking data structures so that it can be retried.
           try {
             resetTaskWithException(messageHandler, head.getId(), asyncId, taskKey, message);
-          } catch (AlreadyClosedException e) {
+          } catch (AlreadyClosedException ignore) {
 
           }
         }
@@ -657,7 +657,7 @@ public class OverseerTaskProcessor implements Runnable, Closeable {
 
         runningTasks.remove(id);
       } catch (KeeperException e) {
-        SolrException.log(log, "", e);
+        log.error("KeeperException", e);
       } catch (InterruptedException e) {
         Thread.currentThread().interrupt();
       }
