@@ -18,7 +18,6 @@ package org.apache.solr.security;
 
 import static org.apache.solr.handler.admin.SecurityConfHandler.getMapValue;
 
-import com.google.common.collect.ImmutableSet;
 import java.lang.invoke.MethodHandles;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
@@ -31,9 +30,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Random;
 import java.util.Set;
+import org.apache.solr.api.AnnotatedApi;
+import org.apache.solr.api.Api;
 import org.apache.solr.common.util.CommandOperation;
-import org.apache.solr.common.util.Utils;
 import org.apache.solr.common.util.ValidatingJsonMap;
+import org.apache.solr.handler.admin.api.ModifyBasicAuthConfigAPI;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -91,6 +92,7 @@ public class Sha256AuthenticationProvider
     }
   }
 
+  @Override
   public boolean authenticate(String username, String password) {
     String cred = credentials.get(username);
     if (cred == null || cred.isEmpty()) return false;
@@ -173,8 +175,10 @@ public class Sha256AuthenticationProvider
 
   @Override
   public ValidatingJsonMap getSpec() {
-    return Utils.getSpec("cluster.security.BasicAuth.Commands").getSpec();
+    final List<Api> apis = AnnotatedApi.getApis(new ModifyBasicAuthConfigAPI());
+    return apis.get(0).getSpec();
   }
 
-  static final Set<String> supported_ops = ImmutableSet.of("set-user", "delete-user");
+  // TODO make private?
+  static final Set<String> supported_ops = Set.of("set-user", "delete-user");
 }
