@@ -24,7 +24,6 @@ import static org.apache.solr.response.RawResponseWriter.CONTENT;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.File;
 import java.util.Arrays;
 import java.util.Collection;
@@ -316,7 +315,7 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     assertNotNull(rsp.getValues().get("fieldTypes"));
     List<String> docIds = (List<String>) rsp.getValues().get("docIds");
     assertNotNull(docIds);
-    assertEquals(100, docIds.size()); // designer limits doc ids to top 100
+    assertEquals(100, docIds.size()); // designer limits the doc ids to top 100
 
     String idField = rsp.getValues()._getStr(UNIQUE_KEY_FIELD_PARAM, null);
     assertNotNull(idField);
@@ -892,9 +891,9 @@ public class TestSchemaDesignerAPI extends SolrCloudTestCase implements SchemaDe
     Map<String, Object> mapDiff = (Map<String, Object>) fieldsDiff.get("updated");
     assertEquals(
         Arrays.asList(
-            ImmutableMap.of(
+            Map.of(
                 "omitTermFreqAndPositions", true, "useDocValuesAsStored", true, "docValues", true),
-            ImmutableMap.of(
+            Map.of(
                 "omitTermFreqAndPositions",
                 false,
                 "useDocValuesAsStored",
