@@ -18,12 +18,12 @@ package org.apache.solr.util;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Arrays.asList;
-import static org.apache.solr.common.cloud.ZkStateReader.COLLECTION_DEF;
+import static org.apache.solr.common.cloud.ZkStateReader.COLLECTION_PROP;
 import static org.apache.solr.common.cloud.ZkStateReader.NRT_REPLICAS;
 import static org.apache.solr.common.cloud.ZkStateReader.NUM_SHARDS_PROP;
+import static org.apache.solr.common.params.CollectionAdminParams.DEFAULTS;
 import static org.apache.solr.common.util.Utils.fromJSONString;
 
-import com.google.common.collect.ImmutableList;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.StringReader;
@@ -40,75 +40,11 @@ import org.apache.solr.common.util.ContentStreamBase;
 import org.apache.solr.common.util.JavaBinCodec;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
-import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.common.util.Utils;
 import org.junit.Assert;
 
 /** */
 public class TestUtils extends SolrTestCaseJ4 {
-
-  public void testJoin() {
-    assertEquals("a|b|c", StrUtils.join(asList("a", "b", "c"), '|'));
-    assertEquals("a,b,c", StrUtils.join(asList("a", "b", "c"), ','));
-    assertEquals("a\\,b,c", StrUtils.join(asList("a,b", "c"), ','));
-    assertEquals("a,b|c", StrUtils.join(asList("a,b", "c"), '|'));
-
-    assertEquals("a\\\\b|c", StrUtils.join(asList("a\\b", "c"), '|'));
-  }
-
-  public void testEscapeTextWithSeparator() {
-    assertEquals("a", StrUtils.escapeTextWithSeparator("a", '|'));
-    assertEquals("a", StrUtils.escapeTextWithSeparator("a", ','));
-
-    assertEquals("a\\|b", StrUtils.escapeTextWithSeparator("a|b", '|'));
-    assertEquals("a|b", StrUtils.escapeTextWithSeparator("a|b", ','));
-    assertEquals("a,b", StrUtils.escapeTextWithSeparator("a,b", '|'));
-    assertEquals("a\\,b", StrUtils.escapeTextWithSeparator("a,b", ','));
-    assertEquals("a\\\\b", StrUtils.escapeTextWithSeparator("a\\b", ','));
-
-    assertEquals("a\\\\\\,b", StrUtils.escapeTextWithSeparator("a\\,b", ','));
-  }
-
-  public void testSplitEscaping() {
-    List<String> arr = StrUtils.splitSmart("\\r\\n:\\t\\f\\b", ":", true);
-    assertEquals(2, arr.size());
-    assertEquals("\r\n", arr.get(0));
-    assertEquals("\t\f\b", arr.get(1));
-
-    arr = StrUtils.splitSmart("\\r\\n:\\t\\f\\b", ":", false);
-    assertEquals(2, arr.size());
-    assertEquals("\\r\\n", arr.get(0));
-    assertEquals("\\t\\f\\b", arr.get(1));
-
-    arr = StrUtils.splitWS("\\r\\n \\t\\f\\b", true);
-    assertEquals(2, arr.size());
-    assertEquals("\r\n", arr.get(0));
-    assertEquals("\t\f\b", arr.get(1));
-
-    arr = StrUtils.splitWS("\\r\\n \\t\\f\\b", false);
-    assertEquals(2, arr.size());
-    assertEquals("\\r\\n", arr.get(0));
-    assertEquals("\\t\\f\\b", arr.get(1));
-
-    arr = StrUtils.splitSmart("\\:foo\\::\\:bar\\:", ":", true);
-    assertEquals(2, arr.size());
-    assertEquals(":foo:", arr.get(0));
-    assertEquals(":bar:", arr.get(1));
-
-    arr = StrUtils.splitWS("\\ foo\\  \\ bar\\ ", true);
-    assertEquals(2, arr.size());
-    assertEquals(" foo ", arr.get(0));
-    assertEquals(" bar ", arr.get(1));
-
-    arr = StrUtils.splitFileNames("/h/s,/h/\\,s,");
-    assertEquals(2, arr.size());
-    assertEquals("/h/s", arr.get(0));
-    assertEquals("/h/,s", arr.get(1));
-
-    arr = StrUtils.splitFileNames("/h/s");
-    assertEquals(1, arr.size());
-    assertEquals("/h/s", arr.get(0));
-  }
 
   public void testNamedLists() {
     SimpleOrderedMap<Integer> map = new SimpleOrderedMap<>();
@@ -136,7 +72,7 @@ public class TestUtils extends SolrTestCaseJ4 {
     assertEquals("ONE", map.getName(0));
     assertEquals(Integer.valueOf(100), map.get("one", 1));
     assertEquals(4, map.indexOf(null, 1));
-    assertEquals(null, map.get(null, 1));
+    assertNull(map.get(null, 1));
 
     map = new SimpleOrderedMap<>();
     map.add("one", 1);
@@ -352,10 +288,50 @@ public class TestUtils extends SolrTestCaseJ4 {
         Utils.mergeJson(
             sink,
             (Map<String, Object>)
-                Utils.fromJSONString("collectionDefaults:{numShards:3 , nrtReplicas:2}")));
+                Utils.fromJSONString("defaults: {collection: {numShards:3 , nrtReplicas:2}}")));
     assertEquals(
-        3L, Utils.getObjectByPath(sink, true, ImmutableList.of(COLLECTION_DEF, NUM_SHARDS_PROP)));
+        3L, Utils.getObjectByPath(sink, true, List.of(DEFAULTS, COLLECTION_PROP, NUM_SHARDS_PROP)));
     assertEquals(
-        2L, Utils.getObjectByPath(sink, true, ImmutableList.of(COLLECTION_DEF, NRT_REPLICAS)));
+        2L, Utils.getObjectByPath(sink, true, List.of(DEFAULTS, COLLECTION_PROP, NRT_REPLICAS)));
+  }
+
+  @SuppressWarnings({"unchecked"})
+  public void testToJson() {
+    Map<String, Object> object =
+        (Map<String, Object>) Utils.fromJSONString("{k2:v2, k1: {a:b, p:r, k21:{xx:yy}}}");
+
+    assertEquals(
+        "{\n"
+            + "  \"k2\":\"v2\",\n"
+            + "  \"k1\":{\n"
+            + "    \"a\":\"b\",\n"
+            + "    \"p\":\"r\",\n"
+            + "    \"k21\":{\"xx\":\"yy\"}}}",
+        new String(Utils.toJSON(object), UTF_8));
+  }
+
+  @SuppressWarnings({"unchecked"})
+  public void testToJsonCompacted() {
+    Map<String, Object> object =
+        (Map<String, Object>) Utils.fromJSONString("{k2:v2, k1: {a:b, p:r, k21:{xx:yy}}}");
+
+    assertEquals(
+        "{\"k2\":\"v2\",\"k1\":{\"a\":\"b\",\"p\":\"r\",\"k21\":{\"xx\":\"yy\"}}}",
+        new String(Utils.toJSON(object, -1), UTF_8));
+  }
+
+  @SuppressWarnings({"unchecked"})
+  public void testToJsonNoIndent() {
+    Map<String, Object> object =
+        (Map<String, Object>) Utils.fromJSONString("{k2:v2, k1: {a:b, p:r, k21:{xx:yy}}}");
+
+    assertEquals(
+        "{\n"
+            + "\"k2\":\"v2\",\n"
+            + "\"k1\":{\n"
+            + "\"a\":\"b\",\n"
+            + "\"p\":\"r\",\n"
+            + "\"k21\":{\"xx\":\"yy\"}}}",
+        new String(Utils.toJSON(object, 0), UTF_8));
   }
 }
